[gd_scene format=4 uid="uid://bqyjehhlpathi"]

[ext_resource type="Script" uid="uid://bsfugc31rs1j5" path="res://Levels/waldo_phase.gd" id="1_w0h0a"]
[ext_resource type="Texture2D" uid="uid://c7nuvsi4yxqnn" path="res://Assets/WoodenFloor.png" id="2_w0h0a"]
[ext_resource type="Script" uid="uid://c53ln7prxb70y" path="res://Levels/prop_setup2.gd" id="3_w0h0a"]
[ext_resource type="Script" uid="uid://c8h46hhl8lsp1" path="res://camera_2d.gd" id="4_x7rwe"]
[ext_resource type="FontFile" uid="uid://dir5njmyrv3ae" path="res://Assets/edit-undo/editundo.ttf" id="5_lf2mf"]
[ext_resource type="PackedScene" uid="uid://suyqf0ki86vh" path="res://click_particle.tscn" id="6_80cou"]
[ext_resource type="PackedScene" uid="uid://bkr280of2gmq8" path="res://life_display.tscn" id="7_xosfc"]

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_m3ha0"]
texture = ExtResource("2_w0h0a")
0:0/0 = 0
0:0/0/terrain_set = 0
0:0/0/terrain = 0
0:0/0/terrains_peering_bit/right_side = 0
0:0/0/terrains_peering_bit/bottom_right_corner = 0
0:0/0/terrains_peering_bit/bottom_side = 0
0:0/0/terrains_peering_bit/bottom_left_corner = 0
0:0/0/terrains_peering_bit/left_side = 0
0:0/0/terrains_peering_bit/top_left_corner = 0
0:0/0/terrains_peering_bit/top_side = 0
0:0/0/terrains_peering_bit/top_right_corner = 0
1:0/0 = 0
1:0/0/terrain_set = 0
1:0/0/terrain = 0
1:0/0/terrains_peering_bit/right_side = 0
1:0/0/terrains_peering_bit/bottom_right_corner = 0
1:0/0/terrains_peering_bit/bottom_side = 0
1:0/0/terrains_peering_bit/bottom_left_corner = 0
1:0/0/terrains_peering_bit/left_side = 0
1:0/0/terrains_peering_bit/top_left_corner = 0
1:0/0/terrains_peering_bit/top_side = 0
1:0/0/terrains_peering_bit/top_right_corner = 0
0:1/0 = 0
0:1/0/terrain_set = 0
0:1/0/terrain = 0
0:1/0/terrains_peering_bit/right_side = 0
0:1/0/terrains_peering_bit/bottom_right_corner = 0
0:1/0/terrains_peering_bit/bottom_side = 0
0:1/0/terrains_peering_bit/bottom_left_corner = 0
0:1/0/terrains_peering_bit/left_side = 0
0:1/0/terrains_peering_bit/top_left_corner = 0
0:1/0/terrains_peering_bit/top_side = 0
0:1/0/terrains_peering_bit/top_right_corner = 0
1:1/0 = 0
1:1/0/terrain_set = 0
1:1/0/terrain = 0
1:1/0/terrains_peering_bit/right_side = 0
1:1/0/terrains_peering_bit/bottom_right_corner = 0
1:1/0/terrains_peering_bit/bottom_side = 0
1:1/0/terrains_peering_bit/bottom_left_corner = 0
1:1/0/terrains_peering_bit/left_side = 0
1:1/0/terrains_peering_bit/top_left_corner = 0
1:1/0/terrains_peering_bit/top_side = 0
1:1/0/terrains_peering_bit/top_right_corner = 0

[sub_resource type="TileSet" id="TileSet_vd23k"]
terrain_set_0/mode = 0
terrain_set_0/terrain_0/name = "Wood"
terrain_set_0/terrain_0/color = Color(0.5, 0.34375, 0.25, 1)
sources/0 = SubResource("TileSetAtlasSource_m3ha0")

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_q1ycg"]
bg_color = Color(0.23492564, 0.23492564, 0.23492564, 0.47100002)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_y3x56"]
bg_color = Color(0.88393724, 0.88393724, 0.88393724, 0.675)

[node name="Node2D" type="Node2D" unique_id=1816791919]
script = ExtResource("1_w0h0a")

[node name="Dirt" type="TileMapLayer" parent="." unique_id=979161486]
tile_map_data = PackedByteArray("AAAOAAcAAAABAAAAAAAOAAYAAAAAAAEAAAAOAAUAAAABAAEAAAAOAAQAAAABAAAAAAAOAAMAAAAAAAEAAAAOAAIAAAABAAEAAAAOAAEAAAABAAEAAAAOAAAAAAAAAAAAAAAOAP//AAAAAAEAAAAOAP7/AAAAAAAAAAAOAP3/AAAAAAEAAAAOAPz/AAAAAAAAAAAOAPv/AAAAAAEAAAAOAPr/AAAAAAAAAAAOAPn/AAABAAEAAAAOAPj/AAABAAAAAAANAAcAAAABAAEAAAANAAYAAAABAAAAAAANAAUAAAABAAAAAAANAAQAAAAAAAEAAAANAAMAAAABAAEAAAANAAIAAAABAAEAAAANAAEAAAAAAAEAAAANAAAAAAABAAAAAAANAP//AAAAAAAAAAANAP7/AAAAAAAAAAANAP3/AAAAAAEAAAANAPz/AAAAAAEAAAANAPv/AAAAAAAAAAANAPr/AAABAAEAAAANAPn/AAABAAAAAAANAPj/AAAAAAEAAAAMAAcAAAABAAEAAAAMAAYAAAAAAAEAAAAMAAUAAAABAAEAAAAMAAQAAAAAAAAAAAAMAAMAAAABAAAAAAAMAAIAAAABAAAAAAAMAAEAAAAAAAEAAAAMAAAAAAABAAEAAAAMAP//AAABAAAAAAAMAP7/AAABAAEAAAAMAP3/AAAAAAEAAAAMAPz/AAABAAEAAAAMAPv/AAABAAEAAAAMAPr/AAAAAAEAAAAMAPn/AAAAAAEAAAAMAPj/AAABAAAAAAALAAcAAAAAAAAAAAALAAYAAAAAAAAAAAALAAUAAAABAAAAAAALAAQAAAAAAAAAAAALAAMAAAAAAAAAAAALAAIAAAAAAAEAAAALAAEAAAAAAAAAAAALAAAAAAAAAAEAAAALAP//AAAAAAAAAAALAP7/AAAAAAEAAAALAP3/AAABAAEAAAALAPz/AAAAAAEAAAALAPv/AAAAAAAAAAALAPr/AAABAAAAAAALAPn/AAABAAEAAAALAPj/AAABAAEAAAAKAAcAAAAAAAEAAAAKAAYAAAAAAAAAAAAKAAUAAAABAAAAAAAKAAQAAAABAAAAAAAKAAMAAAABAAEAAAAKAAIAAAAAAAEAAAAKAAEAAAABAAAAAAAKAAAAAAABAAEAAAAKAP//AAABAAAAAAAKAP7/AAABAAAAAAAKAP3/AAABAAAAAAAKAPz/AAABAAAAAAAKAPv/AAAAAAEAAAAKAPr/AAAAAAEAAAAKAPn/AAAAAAEAAAAKAPj/AAAAAAAAAAAJAAcAAAAAAAAAAAAJAAYAAAAAAAAAAAAJAAUAAAABAAEAAAAJAAQAAAAAAAEAAAAJAAMAAAABAAEAAAAJAAIAAAAAAAAAAAAJAAEAAAAAAAAAAAAJAAAAAAABAAEAAAAJAP//AAAAAAAAAAAJAP7/AAABAAAAAAAJAP3/AAABAAEAAAAJAPz/AAAAAAAAAAAJAPv/AAABAAAAAAAJAPr/AAABAAAAAAAJAPn/AAABAAAAAAAJAPj/AAAAAAEAAAAIAAcAAAAAAAEAAAAIAAYAAAAAAAEAAAAIAAUAAAAAAAAAAAAIAAQAAAABAAAAAAAIAAMAAAABAAEAAAAIAAIAAAAAAAEAAAAIAAEAAAABAAEAAAAIAAAAAAAAAAAAAAAIAP//AAABAAEAAAAIAP7/AAABAAEAAAAIAP3/AAABAAAAAAAIAPz/AAABAAEAAAAIAPv/AAABAAAAAAAIAPr/AAABAAAAAAAIAPn/AAABAAEAAAAIAPj/AAAAAAAAAAAHAAcAAAABAAEAAAAHAAYAAAABAAEAAAAHAAUAAAABAAEAAAAHAAQAAAAAAAEAAAAHAAMAAAABAAAAAAAHAAIAAAAAAAEAAAAHAAEAAAAAAAAAAAAHAAAAAAAAAAAAAAAHAP//AAAAAAAAAAAHAP7/AAAAAAAAAAAHAP3/AAAAAAEAAAAHAPz/AAAAAAEAAAAHAPv/AAABAAEAAAAHAPr/AAABAAEAAAAHAPn/AAAAAAAAAAAHAPj/AAABAAAAAAAGAAcAAAAAAAEAAAAGAAYAAAABAAEAAAAGAAUAAAABAAAAAAAGAAQAAAAAAAEAAAAGAAMAAAAAAAEAAAAGAAIAAAABAAEAAAAGAAEAAAABAAEAAAAGAAAAAAABAAEAAAAGAP//AAAAAAEAAAAGAP7/AAABAAAAAAAGAP3/AAAAAAAAAAAGAPz/AAAAAAEAAAAGAPv/AAAAAAAAAAAGAPr/AAAAAAAAAAAGAPn/AAABAAAAAAAGAPj/AAABAAAAAAAFAAcAAAAAAAEAAAAFAAYAAAABAAEAAAAFAAUAAAAAAAAAAAAFAAQAAAAAAAEAAAAFAAMAAAAAAAEAAAAFAAIAAAAAAAEAAAAFAAEAAAABAAAAAAAFAAAAAAAAAAEAAAAFAP//AAAAAAEAAAAFAP7/AAAAAAAAAAAFAP3/AAAAAAEAAAAFAPz/AAAAAAAAAAAFAPv/AAABAAAAAAAFAPr/AAAAAAEAAAAFAPn/AAAAAAAAAAAFAPj/AAABAAEAAAAEAAcAAAABAAAAAAAEAAYAAAAAAAAAAAAEAAUAAAAAAAAAAAAEAAQAAAAAAAAAAAAEAAMAAAAAAAAAAAAEAAIAAAAAAAAAAAAEAAEAAAAAAAEAAAAEAAAAAAAAAAEAAAAEAP//AAABAAEAAAAEAP7/AAAAAAAAAAAEAP3/AAAAAAAAAAAEAPz/AAAAAAAAAAAEAPv/AAABAAAAAAAEAPr/AAABAAEAAAAEAPn/AAABAAAAAAAEAPj/AAAAAAEAAAADAAcAAAABAAAAAAADAAYAAAAAAAAAAAADAAUAAAABAAAAAAADAAQAAAAAAAEAAAADAAMAAAABAAEAAAADAAIAAAABAAAAAAADAAEAAAAAAAEAAAADAAAAAAABAAAAAAADAP//AAAAAAAAAAADAP7/AAABAAEAAAADAP3/AAABAAAAAAADAPz/AAABAAEAAAADAPv/AAAAAAEAAAADAPr/AAAAAAAAAAADAPn/AAABAAEAAAADAPj/AAAAAAAAAAACAAcAAAABAAAAAAACAAYAAAAAAAAAAAACAAUAAAAAAAAAAAACAAQAAAABAAAAAAACAAMAAAABAAAAAAACAAIAAAAAAAAAAAACAAEAAAAAAAEAAAACAAAAAAAAAAAAAAACAP//AAABAAEAAAACAP7/AAABAAEAAAACAP3/AAABAAAAAAACAPz/AAABAAAAAAACAPv/AAAAAAEAAAACAPr/AAABAAAAAAACAPn/AAABAAAAAAACAPj/AAAAAAEAAAABAAcAAAABAAEAAAABAAYAAAABAAEAAAABAAUAAAAAAAEAAAABAAQAAAAAAAEAAAABAAMAAAAAAAEAAAABAAIAAAABAAEAAAABAAEAAAAAAAAAAAABAAAAAAABAAAAAAABAP//AAABAAEAAAABAP7/AAAAAAEAAAABAP3/AAAAAAAAAAABAPz/AAABAAEAAAABAPv/AAAAAAEAAAABAPr/AAAAAAEAAAABAPn/AAAAAAEAAAABAPj/AAAAAAAAAAAAAAcAAAABAAEAAAAAAAYAAAAAAAEAAAAAAAUAAAABAAAAAAAAAAQAAAAAAAAAAAAAAAMAAAABAAAAAAAAAAIAAAAAAAAAAAAAAAEAAAAAAAAAAAAAAAAAAAABAAAAAAAAAP//AAAAAAAAAAAAAP7/AAABAAAAAAAAAP3/AAABAAAAAAAAAPz/AAAAAAAAAAAAAPv/AAAAAAAAAAAAAPr/AAAAAAEAAAAAAPn/AAABAAEAAAAAAPj/AAABAAEAAAD//wcAAAABAAAAAAD//wYAAAABAAEAAAD//wUAAAABAAEAAAD//wQAAAAAAAAAAAD//wMAAAAAAAEAAAD//wIAAAABAAAAAAD//wEAAAAAAAAAAAD//wAAAAAAAAEAAAD/////AAAAAAEAAAD///7/AAAAAAAAAAD///3/AAABAAAAAAD///z/AAABAAEAAAD///v/AAAAAAAAAAD///r/AAABAAEAAAD///n/AAAAAAAAAAD///j/AAABAAAAAAD+/wcAAAAAAAEAAAD+/wYAAAAAAAEAAAD+/wUAAAABAAAAAAD+/wQAAAAAAAAAAAD+/wMAAAAAAAEAAAD+/wIAAAABAAAAAAD+/wEAAAABAAEAAAD+/wAAAAABAAEAAAD+////AAAAAAAAAAD+//7/AAABAAEAAAD+//3/AAABAAAAAAD+//z/AAABAAEAAAD+//v/AAABAAAAAAD+//r/AAAAAAAAAAD+//n/AAAAAAEAAAD+//j/AAAAAAEAAAD9/wcAAAAAAAEAAAD9/wYAAAAAAAAAAAD9/wUAAAAAAAEAAAD9/wQAAAAAAAAAAAD9/wMAAAABAAEAAAD9/wIAAAABAAEAAAD9/wEAAAAAAAAAAAD9/wAAAAAAAAAAAAD9////AAAAAAEAAAD9//7/AAAAAAAAAAD9//3/AAAAAAAAAAD9//z/AAABAAEAAAD9//v/AAABAAAAAAD9//r/AAABAAAAAAD9//n/AAABAAAAAAD9//j/AAAAAAAAAAD8/wcAAAABAAAAAAD8/wYAAAABAAAAAAD8/wUAAAAAAAEAAAD8/wQAAAAAAAAAAAD8/wMAAAABAAEAAAD8/wIAAAABAAEAAAD8/wEAAAAAAAAAAAD8/wAAAAAAAAAAAAD8////AAAAAAAAAAD8//7/AAABAAEAAAD8//3/AAABAAAAAAD8//z/AAAAAAAAAAD8//v/AAABAAEAAAD8//r/AAAAAAAAAAD8//n/AAABAAAAAAD8//j/AAABAAAAAAD7/wcAAAAAAAEAAAD7/wYAAAAAAAAAAAD7/wUAAAABAAAAAAD7/wQAAAABAAEAAAD7/wMAAAAAAAAAAAD7/wIAAAABAAAAAAD7/wEAAAABAAAAAAD7/wAAAAABAAAAAAD7////AAAAAAEAAAD7//7/AAABAAAAAAD7//3/AAABAAEAAAD7//z/AAABAAEAAAD7//v/AAABAAEAAAD7//r/AAAAAAAAAAD7//n/AAAAAAEAAAD7//j/AAABAAEAAAD6/wcAAAAAAAEAAAD6/wYAAAABAAEAAAD6/wUAAAABAAEAAAD6/wQAAAAAAAEAAAD6/wMAAAABAAEAAAD6/wIAAAAAAAEAAAD6/wEAAAABAAAAAAD6/wAAAAAAAAAAAAD6////AAAAAAAAAAD6//7/AAABAAAAAAD6//3/AAAAAAAAAAD6//z/AAABAAAAAAD6//v/AAABAAAAAAD6//r/AAAAAAAAAAD6//n/AAABAAEAAAD6//j/AAABAAEAAAD5/wcAAAAAAAAAAAD5/wYAAAABAAAAAAD5/wUAAAAAAAAAAAD5/wQAAAAAAAAAAAD5/wMAAAABAAAAAAD5/wIAAAABAAAAAAD5/wEAAAABAAAAAAD5/wAAAAAAAAAAAAD5////AAABAAEAAAD5//7/AAABAAAAAAD5//3/AAAAAAEAAAD5//z/AAAAAAAAAAD5//v/AAAAAAEAAAD5//r/AAABAAEAAAD5//n/AAABAAAAAAD5//j/AAABAAAAAAD4/wcAAAABAAAAAAD4/wYAAAAAAAEAAAD4/wUAAAABAAEAAAD4/wQAAAABAAEAAAD4/wMAAAABAAAAAAD4/wIAAAAAAAEAAAD4/wEAAAABAAAAAAD4/wAAAAABAAAAAAD4////AAABAAAAAAD4//7/AAAAAAEAAAD4//3/AAAAAAAAAAD4//z/AAAAAAEAAAD4//v/AAABAAAAAAD4//r/AAAAAAEAAAD4//n/AAAAAAEAAAD4//j/AAAAAAAAAAD3/wcAAAAAAAEAAAD3/wYAAAAAAAEAAAD3/wUAAAABAAEAAAD3/wQAAAAAAAAAAAD3/wMAAAABAAEAAAD3/wIAAAABAAEAAAD3/wEAAAABAAAAAAD3/wAAAAABAAAAAAD3////AAABAAEAAAD3//7/AAAAAAAAAAD3//3/AAAAAAEAAAD3//z/AAABAAAAAAD3//v/AAABAAEAAAD3//r/AAAAAAAAAAD3//n/AAABAAAAAAD3//j/AAABAAAAAAD2/wcAAAABAAAAAAD2/wYAAAABAAAAAAD2/wUAAAAAAAAAAAD2/wQAAAABAAEAAAD2/wMAAAABAAAAAAD2/wIAAAABAAAAAAD2/wEAAAABAAAAAAD2/wAAAAAAAAAAAAD2////AAABAAAAAAD2//7/AAAAAAAAAAD2//3/AAABAAAAAAD2//z/AAAAAAAAAAD2//v/AAABAAAAAAD2//r/AAAAAAEAAAD2//n/AAABAAEAAAD2//j/AAABAAAAAAD1/wcAAAAAAAAAAAD1/wYAAAAAAAEAAAD1/wUAAAAAAAEAAAD1/wQAAAABAAEAAAD1/wMAAAABAAEAAAD1/wIAAAAAAAAAAAD1/wEAAAAAAAAAAAD1/wAAAAABAAAAAAD1////AAAAAAAAAAD1//7/AAAAAAEAAAD1//3/AAABAAEAAAD1//z/AAABAAAAAAD1//v/AAABAAEAAAD1//r/AAABAAEAAAD1//n/AAAAAAAAAAD1//j/AAAAAAEAAAD0/wcAAAABAAEAAAD0/wYAAAABAAEAAAD0/wUAAAAAAAAAAAD0/wQAAAABAAEAAAD0/wMAAAAAAAAAAAD0/wIAAAABAAAAAAD0/wEAAAAAAAAAAAD0/wAAAAAAAAEAAAD0////AAABAAEAAAD0//7/AAAAAAAAAAD0//3/AAABAAAAAAD0//z/AAAAAAEAAAD0//v/AAABAAEAAAD0//r/AAABAAAAAAD0//n/AAABAAAAAAD0//j/AAABAAEAAADz/wcAAAABAAEAAADz/wYAAAAAAAEAAADz/wUAAAABAAEAAADz/wQAAAAAAAAAAADz/wMAAAABAAAAAADz/wIAAAAAAAEAAADz/wEAAAAAAAAAAADz/wAAAAAAAAAAAADz////AAAAAAAAAADz//7/AAABAAEAAADz//3/AAABAAEAAADz//z/AAAAAAAAAADz//v/AAAAAAEAAADz//r/AAABAAEAAADz//n/AAABAAAAAADz//j/AAAAAAEAAADy/wcAAAABAAEAAADy/wYAAAAAAAAAAADy/wUAAAABAAAAAADy/wQAAAABAAAAAADy/wMAAAABAAAAAADy/wIAAAABAAEAAADy/wEAAAABAAAAAADy/wAAAAABAAEAAADy////AAAAAAAAAADy//7/AAAAAAEAAADy//3/AAAAAAAAAADy//z/AAABAAEAAADy//v/AAAAAAEAAADy//r/AAAAAAEAAADy//n/AAABAAAAAADy//j/AAAAAAAAAADx/wcAAAAAAAAAAADx/wYAAAAAAAAAAADx/wUAAAABAAEAAADx/wQAAAAAAAEAAADx/wMAAAAAAAEAAADx/wIAAAAAAAAAAADx/wEAAAAAAAEAAADx/wAAAAAAAAEAAADx////AAAAAAEAAADx//7/AAAAAAEAAADx//3/AAAAAAEAAADx//z/AAAAAAAAAADx//v/AAAAAAAAAADx//r/AAABAAEAAADx//n/AAABAAEAAADx//j/AAABAAAAAAAQAAkAAAAAAAEAAAAQAAgAAAABAAEAAAAQAAcAAAABAAAAAAAQAAYAAAAAAAAAAAAQAAUAAAAAAAAAAAAQAAQAAAABAAAAAAAQAAMAAAABAAAAAAAQAAIAAAAAAAEAAAAQAAEAAAAAAAEAAAAQAAAAAAAAAAEAAAAQAP//AAABAAAAAAAQAP7/AAABAAAAAAAQAP3/AAAAAAAAAAAQAPz/AAABAAAAAAAQAPv/AAAAAAAAAAAQAPr/AAABAAAAAAAQAPn/AAAAAAAAAAAQAPj/AAAAAAAAAAAQAPf/AAABAAEAAAAQAPb/AAABAAEAAAAQAPX/AAABAAEAAAAPAAkAAAAAAAEAAAAPAAgAAAAAAAEAAAAPAAcAAAABAAAAAAAPAAYAAAAAAAAAAAAPAAUAAAABAAAAAAAPAAQAAAAAAAEAAAAPAAMAAAAAAAAAAAAPAAIAAAAAAAEAAAAPAAEAAAABAAEAAAAPAAAAAAAAAAEAAAAPAP//AAABAAEAAAAPAP7/AAABAAAAAAAPAP3/AAABAAEAAAAPAPz/AAAAAAEAAAAPAPv/AAAAAAAAAAAPAPr/AAABAAEAAAAPAPn/AAAAAAEAAAAPAPj/AAAAAAEAAAAPAPf/AAABAAEAAAAPAPb/AAAAAAAAAAAPAPX/AAABAAEAAAAOAAkAAAABAAEAAAAOAAgAAAAAAAAAAAAOAPf/AAAAAAEAAAAOAPb/AAAAAAEAAAAOAPX/AAAAAAEAAAANAAkAAAABAAAAAAANAAgAAAABAAEAAAANAPf/AAABAAEAAAANAPb/AAAAAAAAAAANAPX/AAAAAAEAAAAMAAkAAAAAAAAAAAAMAAgAAAAAAAAAAAAMAPf/AAAAAAEAAAAMAPb/AAAAAAAAAAAMAPX/AAAAAAAAAAALAAkAAAABAAEAAAALAAgAAAABAAAAAAALAPf/AAAAAAAAAAALAPb/AAABAAAAAAALAPX/AAABAAAAAAAKAAkAAAABAAEAAAAKAAgAAAABAAAAAAAKAPf/AAABAAAAAAAKAPb/AAABAAAAAAAKAPX/AAABAAEAAAAJAAkAAAAAAAEAAAAJAAgAAAAAAAEAAAAJAPf/AAAAAAEAAAAJAPb/AAAAAAAAAAAJAPX/AAABAAEAAAAIAAkAAAAAAAEAAAAIAAgAAAABAAAAAAAIAPf/AAAAAAAAAAAIAPb/AAAAAAAAAAAIAPX/AAABAAEAAAAHAAkAAAABAAEAAAAHAAgAAAABAAAAAAAHAPf/AAABAAEAAAAHAPb/AAABAAAAAAAHAPX/AAAAAAEAAAAGAAkAAAABAAAAAAAGAAgAAAAAAAAAAAAGAPf/AAAAAAEAAAAGAPb/AAABAAAAAAAGAPX/AAAAAAEAAAAFAAkAAAAAAAEAAAAFAAgAAAAAAAEAAAAFAPf/AAAAAAAAAAAFAPb/AAAAAAAAAAAFAPX/AAABAAEAAAAEAAkAAAAAAAEAAAAEAAgAAAABAAAAAAAEAPf/AAABAAEAAAAEAPb/AAABAAEAAAAEAPX/AAAAAAEAAAADAAkAAAAAAAAAAAADAAgAAAABAAAAAAADAPf/AAAAAAAAAAADAPb/AAABAAEAAAADAPX/AAABAAAAAAACAAkAAAAAAAEAAAACAAgAAAABAAEAAAACAPf/AAABAAAAAAACAPb/AAABAAEAAAACAPX/AAABAAAAAAABAAkAAAAAAAAAAAABAAgAAAAAAAEAAAABAPf/AAABAAAAAAABAPb/AAAAAAAAAAABAPX/AAAAAAEAAAAAAAkAAAABAAEAAAAAAAgAAAAAAAEAAAAAAPf/AAABAAEAAAAAAPb/AAAAAAAAAAAAAPX/AAAAAAAAAAD//wkAAAABAAEAAAD//wgAAAABAAAAAAD///f/AAABAAEAAAD///b/AAABAAAAAAD///X/AAABAAAAAAD+/wkAAAAAAAAAAAD+/wgAAAAAAAEAAAD+//f/AAABAAAAAAD+//b/AAABAAAAAAD+//X/AAABAAEAAAD9/wkAAAABAAAAAAD9/wgAAAABAAEAAAD9//f/AAABAAEAAAD9//b/AAABAAAAAAD9//X/AAAAAAEAAAD8/wkAAAAAAAAAAAD8/wgAAAAAAAEAAAD8//f/AAABAAAAAAD8//b/AAAAAAEAAAD8//X/AAAAAAEAAAD7/wkAAAABAAEAAAD7/wgAAAABAAEAAAD7//f/AAAAAAEAAAD7//b/AAABAAEAAAD7//X/AAABAAEAAAD6/wkAAAABAAAAAAD6/wgAAAAAAAAAAAD6//f/AAABAAAAAAD6//b/AAAAAAEAAAD6//X/AAAAAAEAAAD5/wkAAAABAAEAAAD5/wgAAAAAAAEAAAD5//f/AAABAAAAAAD5//b/AAABAAEAAAD5//X/AAABAAAAAAD4/wkAAAAAAAAAAAD4/wgAAAAAAAEAAAD4//f/AAABAAEAAAD4//b/AAABAAAAAAD4//X/AAABAAAAAAD3/wkAAAABAAEAAAD3/wgAAAAAAAEAAAD3//f/AAAAAAAAAAD3//b/AAAAAAAAAAD3//X/AAABAAEAAAD2/wkAAAABAAAAAAD2/wgAAAAAAAAAAAD2//f/AAABAAAAAAD2//b/AAAAAAEAAAD2//X/AAABAAEAAAD1/wkAAAABAAAAAAD1/wgAAAAAAAEAAAD1//f/AAABAAEAAAD1//b/AAABAAAAAAD1//X/AAAAAAAAAAD0/wkAAAAAAAEAAAD0/wgAAAAAAAEAAAD0//f/AAABAAEAAAD0//b/AAAAAAEAAAD0//X/AAAAAAEAAADz/wkAAAABAAEAAADz/wgAAAAAAAEAAADz//f/AAAAAAAAAADz//b/AAABAAAAAADz//X/AAAAAAAAAADy/wkAAAABAAEAAADy/wgAAAAAAAAAAADy//f/AAABAAEAAADy//b/AAAAAAEAAADy//X/AAABAAEAAADx/wkAAAABAAEAAADx/wgAAAAAAAAAAADx//f/AAABAAAAAADx//b/AAAAAAEAAADx//X/AAAAAAEAAADw/wkAAAAAAAAAAADw/wgAAAABAAAAAADw/wcAAAAAAAEAAADw/wYAAAABAAEAAADw/wUAAAABAAEAAADw/wQAAAAAAAEAAADw/wMAAAAAAAAAAADw/wIAAAABAAEAAADw/wEAAAABAAAAAADw/wAAAAABAAAAAADw////AAABAAAAAADw//7/AAAAAAAAAADw//3/AAABAAEAAADw//z/AAAAAAEAAADw//v/AAAAAAAAAADw//r/AAABAAEAAADw//n/AAAAAAEAAADw//j/AAAAAAEAAADw//f/AAABAAEAAADw//b/AAAAAAAAAADw//X/AAABAAEAAADv/wkAAAABAAEAAADv/wgAAAABAAAAAADv/wcAAAAAAAAAAADv/wYAAAABAAAAAADv/wUAAAABAAAAAADv/wQAAAABAAEAAADv/wMAAAABAAEAAADv/wIAAAAAAAAAAADv/wEAAAABAAAAAADv/wAAAAAAAAAAAADv////AAAAAAEAAADv//7/AAABAAEAAADv//3/AAABAAEAAADv//z/AAAAAAAAAADv//v/AAAAAAAAAADv//r/AAABAAAAAADv//n/AAAAAAEAAADv//j/AAAAAAEAAADv//f/AAAAAAAAAADv//b/AAAAAAEAAADv//X/AAAAAAEAAAASAAsAAAABAAEAAAASAAoAAAAAAAEAAAASAAkAAAABAAAAAAASAAgAAAABAAEAAAASAAcAAAABAAAAAAASAAYAAAABAAAAAAASAAUAAAAAAAEAAAASAAQAAAAAAAAAAAASAAMAAAAAAAEAAAASAAIAAAABAAAAAAASAAEAAAAAAAAAAAASAAAAAAABAAAAAAASAP//AAAAAAAAAAASAP7/AAABAAEAAAASAP3/AAABAAEAAAASAPz/AAAAAAEAAAASAPv/AAAAAAEAAAASAPr/AAABAAEAAAASAPn/AAABAAAAAAASAPj/AAABAAEAAAASAPf/AAABAAEAAAASAPb/AAAAAAEAAAASAPX/AAABAAAAAAASAPT/AAAAAAAAAAARAAsAAAABAAEAAAARAAoAAAABAAAAAAARAAkAAAAAAAEAAAARAAgAAAAAAAAAAAARAAcAAAABAAAAAAARAAYAAAAAAAAAAAARAAUAAAAAAAEAAAARAAQAAAABAAAAAAARAAMAAAAAAAEAAAARAAIAAAAAAAAAAAARAAEAAAABAAEAAAARAAAAAAABAAEAAAARAP//AAAAAAAAAAARAP7/AAAAAAAAAAARAP3/AAABAAEAAAARAPz/AAAAAAEAAAARAPv/AAAAAAEAAAARAPr/AAABAAAAAAARAPn/AAAAAAEAAAARAPj/AAABAAEAAAARAPf/AAAAAAAAAAARAPb/AAAAAAAAAAARAPX/AAAAAAAAAAARAPT/AAABAAEAAAAQAAsAAAABAAAAAAAQAAoAAAAAAAAAAAAQAPT/AAAAAAAAAAAPAAsAAAABAAEAAAAPAAoAAAAAAAAAAAAPAPT/AAABAAAAAAAOAAsAAAAAAAEAAAAOAAoAAAABAAEAAAAOAPT/AAABAAEAAAANAAsAAAAAAAEAAAANAAoAAAAAAAEAAAANAPT/AAABAAEAAAAMAAsAAAABAAAAAAAMAAoAAAABAAAAAAAMAPT/AAAAAAEAAAALAAsAAAAAAAAAAAALAAoAAAAAAAEAAAALAPT/AAAAAAEAAAAKAAsAAAABAAAAAAAKAAoAAAABAAEAAAAKAPT/AAAAAAEAAAAJAAsAAAABAAEAAAAJAAoAAAAAAAEAAAAJAPT/AAABAAAAAAAIAAsAAAABAAEAAAAIAAoAAAAAAAAAAAAIAPT/AAAAAAAAAAAHAAsAAAABAAAAAAAHAAoAAAAAAAEAAAAHAPT/AAAAAAAAAAAGAAsAAAAAAAAAAAAGAAoAAAABAAAAAAAGAPT/AAAAAAAAAAAFAAsAAAAAAAAAAAAFAAoAAAAAAAAAAAAFAPT/AAAAAAAAAAAEAAsAAAABAAEAAAAEAAoAAAABAAEAAAAEAPT/AAAAAAAAAAADAAsAAAAAAAEAAAADAAoAAAAAAAAAAAADAPT/AAAAAAAAAAACAAsAAAAAAAAAAAACAAoAAAAAAAAAAAACAPT/AAAAAAEAAAABAAsAAAAAAAAAAAABAAoAAAABAAAAAAABAPT/AAAAAAEAAAAAAAsAAAABAAAAAAAAAAoAAAAAAAEAAAAAAPT/AAAAAAEAAAD//wsAAAABAAAAAAD//woAAAABAAEAAAD///T/AAABAAAAAAD+/wsAAAABAAAAAAD+/woAAAABAAEAAAD+//T/AAAAAAAAAAD9/wsAAAABAAEAAAD9/woAAAABAAAAAAD9//T/AAAAAAEAAAD8/wsAAAAAAAEAAAD8/woAAAAAAAEAAAD8//T/AAABAAAAAAD7/wsAAAABAAAAAAD7/woAAAAAAAAAAAD7//T/AAAAAAEAAAD6/wsAAAABAAEAAAD6/woAAAABAAEAAAD6//T/AAAAAAAAAAD5/wsAAAAAAAAAAAD5/woAAAAAAAEAAAD5//T/AAAAAAEAAAD4/wsAAAAAAAAAAAD4/woAAAABAAEAAAD4//T/AAABAAEAAAD3/wsAAAABAAAAAAD3/woAAAAAAAEAAAD3//T/AAABAAAAAAD2/wsAAAAAAAEAAAD2/woAAAABAAAAAAD2//T/AAABAAEAAAD1/wsAAAAAAAAAAAD1/woAAAABAAEAAAD1//T/AAAAAAEAAAD0/wsAAAAAAAAAAAD0/woAAAABAAAAAAD0//T/AAAAAAEAAADz/wsAAAAAAAEAAADz/woAAAABAAEAAADz//T/AAAAAAAAAADy/wsAAAABAAEAAADy/woAAAABAAEAAADy//T/AAAAAAEAAADx/wsAAAAAAAAAAADx/woAAAABAAAAAADx//T/AAABAAAAAADw/wsAAAAAAAEAAADw/woAAAAAAAAAAADw//T/AAABAAAAAADv/wsAAAAAAAAAAADv/woAAAAAAAEAAADv//T/AAAAAAEAAADu/wsAAAABAAEAAADu/woAAAAAAAEAAADu/wkAAAAAAAEAAADu/wgAAAABAAAAAADu/wcAAAABAAEAAADu/wYAAAABAAEAAADu/wUAAAABAAAAAADu/wQAAAABAAAAAADu/wMAAAABAAEAAADu/wIAAAABAAEAAADu/wEAAAABAAEAAADu/wAAAAABAAEAAADu////AAAAAAEAAADu//7/AAAAAAAAAADu//3/AAAAAAAAAADu//z/AAAAAAEAAADu//v/AAABAAEAAADu//r/AAABAAEAAADu//n/AAAAAAAAAADu//j/AAAAAAAAAADu//f/AAAAAAAAAADu//b/AAABAAAAAADu//X/AAABAAEAAADu//T/AAABAAEAAAA=")
tile_set = SubResource("TileSet_vd23k")

[node name="Props" type="Node2D" parent="." unique_id=873634840]
y_sort_enabled = true
script = ExtResource("3_w0h0a")

[node name="Camera2D" type="Camera2D" parent="." unique_id=1154877549]
ignore_rotation = false
zoom = Vector2(4, 4)
script = ExtResource("4_x7rwe")

[node name="TaskLabel" type="RichTextLabel" parent="Camera2D" unique_id=1352093294]
z_index = 3
texture_filter = 1
offset_left = -240.0
offset_top = -134.0
offset_right = 239.0
offset_bottom = -94.0
mouse_filter = 2
theme_override_fonts/normal_font = ExtResource("5_lf2mf")
theme_override_font_sizes/normal_font_size = 24
text = "TEST"
horizontal_alignment = 1

[node name="HintLabel" type="RichTextLabel" parent="Camera2D" unique_id=1895751557]
visible = false
z_index = 3
texture_filter = 1
offset_left = -240.0
offset_top = 97.0
offset_right = 239.0
offset_bottom = 137.0
mouse_filter = 2
theme_override_fonts/normal_font = ExtResource("5_lf2mf")
theme_override_font_sizes/normal_font_size = 24
text = "Hint unlocked!"
horizontal_alignment = 1

[node name="ProgressBar" type="ProgressBar" parent="Camera2D" unique_id=893655791]
z_index = 3
offset_left = -133.0
offset_top = -113.0
offset_right = 133.0
offset_bottom = -105.0
mouse_filter = 2
theme_override_styles/background = SubResource("StyleBoxFlat_q1ycg")
theme_override_styles/fill = SubResource("StyleBoxFlat_y3x56")
show_percentage = false

[node name="ClickParticle" parent="." unique_id=1348139992 instance=ExtResource("6_80cou")]

[node name="Transition" type="ColorRect" parent="." unique_id=1401210668]
z_index = 1000
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -113.0
offset_top = -474.99997
offset_right = 587.0
offset_bottom = 225.00003
grow_horizontal = 2
grow_vertical = 2
rotation = 0.5235988
color = Color(0.08365663, 0.204007, 0.30549613, 1)

[node name="Transition2" type="ColorRect" parent="." unique_id=2095030160]
z_index = 1000
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -1173.0
offset_top = -1050.0
offset_right = -487.36713
offset_bottom = -381.91644
grow_horizontal = 2
grow_vertical = 2
rotation = 0.5235988
color = Color(0.08365663, 0.204007, 0.30549613, 1)

[node name="EndTimer" type="Timer" parent="." unique_id=1387535855]
wait_time = 1.5

[node name="GameTimer" type="Timer" parent="." unique_id=1416522149]
wait_time = 20.0
one_shot = true

[node name="LifeDisplay" parent="." unique_id=997425920 instance=ExtResource("7_xosfc")]
mouse_filter = 2

[connection signal="timeout" from="GameTimer" to="Props" method="_on_game_timer_timeout"]
